# ACF_GPU

Documents/acf_gpu/: acf_readme.txt
src/: CMakeLists.txt  Makefile  acf_detect.cpp  acf_detect.hpp  atan_test.cpp  cartToPolar.hpp  img_process.cu  img_process.hpp  main.cpp
